--- a/.github/workflows/integration_test_auto.yaml
+++ b/.github/workflows/integration_test_auto.yaml
@@ -83,6 +83,8 @@ jobs:
   job2:
     name: Integration test for mg12 with gcc
     runs-on: [self-hosted, ds-sqa-hn-iec]
+    if: ${{ always() }}
+    needs: [job1]
     permissions:
       contents: read
       pull-requests: write
