--- a/.github/workflows/unit_test_auto.yaml
+++ b/.github/workflows/unit_test_auto.yaml
@@ -7,8 +7,8 @@ on:
       - '**'        # matches every branch
 env:
   REPO_URL: ${{ github.server_url }}/${{ github.repository }}
-  REPO_BRANCH: ${{ github.event.inputs.branch }}
-  REPO_NAME: ${{ github.repository }}
+  REPO_BRANCH: ${{ github.head_ref || github.ref_name }}
+  REPO_NAME: ${{ github.event.repository.name }}
   JLINK_PATH: /opt/SEGGER/JLink/libjlinkarm.so
   SDK_PATH: /home/sqa/SimplicityStudio/SDKs/gecko_sdk
 jobs:
@@ -33,8 +33,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
-      with:
-        ref: "${{ github.event.inputs.branch }}"
+
     - name: Add extension
       run: |
         cd $SDK_PATH
