--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -144,7 +144,7 @@ jobs:
         export  ADAPTER_SN=440133193
         export LST_PATH=$PWD/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
         export HOST_IP=192.168.1.69
-        cd test/
+        cd ../test/
         ls -la
         bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
     - name: Upload firmware
@@ -282,7 +282,7 @@ jobs:
         export LST_PATH=$PWD/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
         ls -la
         git branch
-        cd test/
+        cd ../test/
         ls -la
         bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
     - name: Upload firmware
