--- a/.github/workflows/integration_test_auto.yaml
+++ b/.github/workflows/integration_test_auto.yaml
@@ -27,7 +27,7 @@ jobs:
       COMPONENTS: all
       ADAPTER_SN: 440111030 
       CHIP: EFR32MG24BXXXF1536
-      TOOL_DIRS: ~/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+      TOOL_DIRS: /home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
       START_ADDR_FLASH: 0x8000000
 
     steps:
@@ -48,10 +48,10 @@ jobs:
 
     - name: Run test
       run: |
-        export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
-        export PATH=$PATH:~/slc_cli
+        export PATH=$PATH:$HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
+        export PATH=$PATH:$HOME/slc_cli
         export PATH=$PATH:/usr/bin/
-        export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        export PATH=$PATH:$HOME/amazon-corretto-17.0.12.7.1-linux-x64/bin
         export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH}
         ninja --version
@@ -60,6 +60,8 @@ jobs:
         make prepare
         cd build
         slc signature trust -extpath $SDK_PATH/extension/$REPO_NAME
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
+        make integration_test_info -j4
 
         cd ../test
     
@@ -95,7 +97,7 @@ jobs:
       COMPONENTS: all
       ADAPTER_SN: 440189400 
       CHIP: EFR32MG12
-      TOOL_DIRS: ~/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+      TOOL_DIRS: /home/sqa/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
       START_ADDR_FLASH: 0x0000000
 
     steps:
@@ -117,10 +119,10 @@ jobs:
 
     - name: Prepare environment
       run: |
-        export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
-        export PATH=$PATH:~/slc_cli
+        export PATH=$PATH:$HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
+        export PATH=$PATH:$HOME/slc_cli
         export PATH=$PATH:/usr/bin/
-        export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        export PATH=$PATH:$HOME/amazon-corretto-17.0.12.7.1-linux-x64/bin
         export LST_PATH=$PWD/build/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH}
         ninja --version
@@ -129,6 +131,8 @@ jobs:
         make prepare
         cd build
         slc signature trust -extpath $SDK_PATH/extension/$REPO_NAME
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
+        make integration_test_info -j4
 
         cd ../test
     
